--- a/charts/free5gc/values.yaml
+++ b/charts/free5gc/values.yaml
@@ -44,7 +44,7 @@ global:
     enabled: true
     name: n2network
     type: ipvlan
-    masterIf: wlp0s20f3
+    masterIf: enp59s0
     subnetIP: 10.100.50.248
     cidr: 29
     gatewayIP: 10.100.50.254
@@ -53,7 +53,7 @@ global:
     enabled: true
     name: n3network
     type: ipvlan
-    masterIf: wlp0s20f3
+    masterIf: enp59s0
     subnetIP: 10.100.50.232
     cidr: 29
     gatewayIP: 10.100.50.238
@@ -62,7 +62,7 @@ global:
     enabled: true
     name: n4network
     type: ipvlan
-    masterIf: wlp0s20f3
+    masterIf: enp59s0
     subnetIP: 10.100.50.240
     cidr: 29
     gatewayIP: 10.100.50.246
@@ -71,7 +71,7 @@ global:
     enabled: true
     name: n6network
     type: ipvlan
-    masterIf: wlp0s20f3
+    masterIf: enp59s0
     subnetIP: 10.100.100.0
     cidr: 24
     gatewayIP: 10.100.100.1
@@ -80,7 +80,7 @@ global:
     enabled: true
     name: n9network
     type: ipvlan
-    masterIf: wlp0s20f3
+    masterIf: enp59s0
     subnetIP: 10.100.50.224
     cidr: 29
     gatewayIP: 10.100.50.230
